<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
    
        <TextView
        android:id="@+id/settings_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/settings_home"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
                
                                                         
        <Button
        android:id="@+id/btn_bewegungsmelder_aus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onButtonClick"
        android:text="@string/bewegungsmelder_aus"
        android:textColor="@color/white" />
        
        <Button
        android:id="@+id/btn_bewegungsmelder_ein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onButtonClick"
        android:text="@string/bewegungsmelder_ein"
        android:textColor="@color/white" />
        
         <Button
        android:id="@+id/btn_trigger_aus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onButtonClick"
        android:text="@string/trigger_aus"
        android:textColor="@color/white" />
    
        <Button
        android:id="@+id/btn_trigger_ein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onButtonClick"
        android:text="@string/trigger_ein"
        android:textColor="@color/white" />

</LinearLayout>