<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wetter_willkommen_11_00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:text="@string/screen_steckdosen_steuerung"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/sp_steckdose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:entries="@array/zimmer" />

    <Button
        android:id="@+id/btn_steckdose_ein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onButtonClick"
        android:text="@string/btn_steckdose_ein"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_steckdose_aus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onButtonClick"
        android:text="@string/btn_steckdose_aus"
        android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/button_zimmerauswertung"
            android:gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/index_steckdosen" />

</LinearLayout>