<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
    
        <TextView
        android:id="@+id/avg_willkommen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/btn_avg"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
        
            <TextView
        android:id="@+id/avg_txt_field_avg_luftfeuchtigkeit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/leer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
                     <TextView
        android:id="@+id/avg_txt_field_avg_temperatur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/leer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
                              <TextView
        android:id="@+id/avg_txt_field_max_luftfeuchtigkeit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/leer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
                                       <TextView
        android:id="@+id/avg_txt_field_max_temperatur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/leer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
                                                <TextView
        android:id="@+id/avg_txt_field_min_luftfeuchtigkeit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/leer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
                                                         <TextView
        android:id="@+id/avg_txt_field_min_temperatur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/leer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />
                                                         
                                                            <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onButtonClick"
        android:text="@string/btn_home"
        android:textColor="@color/white" />
    

</LinearLayout>
